syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.mateuschacon.keymanager.grpc";
option java_outer_classname = "Keymanager";
option objc_class_prefix = "HLW";

package br.com.mateuschacon.keymanager.grpc;

service KeymanagerService {
  rpc send (KeymanagerRequest) returns (KeymanagerReply) {}

  rpc registra(NovaChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoConta{
  DEFAULT_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}
enum TipoChave{
  DEFAULT_TIPO_CHAVE = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;

}
message NovaChavePixRequest{
  string indentificadorCliente = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}
message ChavePixResponse{
  string identificadorCliente = 1;
  string indentificadorPix = 2;
}

message KeymanagerRequest {
  string name = 1;
}

message KeymanagerReply {
  string message = 1;
}